--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
 	<style type="text/css">
-		============================================================================================*/ @font-face {
+ @font-face {
 			font-weight: 400;
 			font-style: normal;
 			font-family: 'Inter-Loom';
